Update Dockerfile
使用java17